Finished with Ecma6 knockout export

--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Ecma6GeneratorKnockout.cs" />
     <Compile Include="Helpers.cs" />
     <Compile Include="Ecma6Generator.cs" />
     <Compile Include="JsGenerator.cs" />
